examples/test/testpolicy15860.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15860
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key10: value46
      key19: value35
      key36: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value23
          key48: value15
          key46: value38
